--- a/styles.css
+++ b/styles.css
@@ -4,38 +4,61 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f4f4f4;
-    font-family: Arial, sans-serif;
-    
+    background-color: #1e1e1e;
+    color: white;
+    font-family: "Poppins", sans-serif;    
 }
 
 #container {
     display: flex;
     flex-wrap: wrap;
-    width: 960px; /* Sabit genişlik */
-    height: 960px; /* Sabit yükseklik */
-    border: 2px solid black;
+    width: 600px; /* Sabit genişlik */
+    height: 600px; /* Sabit yükseklik */
+    border: 3px solid #45a049;
+    border-radius: 10px;
+
 }
 
 .grid-square {
     background-color: white;
-    border: 1px solid #ddd;
+    border: 1px solid black;
     box-sizing: border-box;
     opacity: 1;
     transition: opacity 0.3s; /* Yumuşak geçiş efekti */
 }
 
+
 h1 {
     margin-bottom: 20px;
+    padding: 10px;
+    background-color: #45a049;
+    border-radius: 5px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+
 }
 
 .grid-square:hover {
     background-color: black;
+    filter: brightness(1.2);
 }
 
 button {
     margin-bottom: 20px;
-    padding: 10px 20px;
+    padding: 12px 20px;
     font-size: 16px;
     cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+
 }
