--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ body {
     height: 600px; /* Sabit yükseklik */
     border: 3px solid #45a049;
     border-radius: 10px;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -60,5 +62,11 @@ button:hover {
     display: flex;
     justify-content: center;
     gap: 15px;
+}
 
+#text {
+    font-size: 25px;
+    padding: 20px;
+    background-color: #45a049;
+    border-radius: 5px;
 }
